frontend/src/_assets/styles/core/navbar.scss
#okp-core-navbar {
  background-color: var(--okp-light);
  font-size: 0;
  line-height: 0;
  display: flex;
  flex: 0 0 64px;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  height: calc(100vh - $htopbar);
  transition: flex-basis 0.3s;

  .okp-header {
    text-align: center;
    width: 100%;
    position: relative;

    &-banner {
      height: 148px;
      transition: height 0.3s;

      &-cover {
        overflow: hidden;
        width: 100%;
        height: 96px;
        position: relative;
        opacity: 1;
        transition: height 0.3s, opacity 0.3s;

        &-img {
          position: absolute;
          top: 50%;
          left: 50%;
          opacity: 0.5;
          transform: translate(-50%, -50%);
          filter: blur(10px);
        }
      }

      &-avatar {
        border: 6px solid var(--okp-light);
        border-radius: 50%;
        overflow: hidden;
        width: 96px;
        height: 96px;
        position: absolute;
        top: 38px;
        left: 50%;
        transform: translate(-50%, 0);
        transition: width 0.3s, height 0.3s, top 0.3s;

        &-img {
          width: 100%;
          height: 100%;
        }
      }
    }

    &-info {
      &-name {
        color: var(--okp-text);
        font-family: "Quicksand", "Noto Sans", sans-serif;
        font-size: 1.2rem;
        font-weight: 600;
        line-height: 120%;
        word-break: break-word;
        opacity: 1;
        transition: all 0.3s;
        padding: 12px 12px 4px;
      }

      &-title {
        color: var(--okp-text-low);
        font-family: "Quicksand", "Noto Sans", sans-serif;
        font-size: 0.8rem;
        font-weight: 600;
        line-height: 120%;
        word-break: break-word;
        opacity: 1;
        transition: all 0.3s;
        padding: 4px 12px 24px;
      }
    }

    &-counts {
      > ul {
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: center;

        > li {
          font-size: 0.9rem;
          font-weight: 600;
          line-height: 120%;
          display: flex;
          flex-direction: column;
          align-items: center;
          justify-content: center;
          position: relative;
          transition: all 0.3s;
          padding: 0 12px;

          + li::after {
            content: "";
            background-color: var(--okp-lighten);
            width: 1px;
            height: 32px;
            position: absolute;
            top: 6px;
            left: 0;
          }

          > span + span {
            color: var(--okp-text-low);
            font-size: 0.5rem;
            font-weight: 400;
            text-transform: uppercase;
            letter-spacing: 1px;
            transition: all 0.3s;
            padding: 6px 0 0;
          }
        }
      }
    }
  }

  .okp-menu {
    box-sizing: border-box;
    overflow: hidden;
    width: 100%;
    height: 100%;
    padding: 0;

    ul {
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      width: 100%;

      > li {
        box-sizing: border-box;
        display: flex;
        align-items: center;
        justify-content: center;
        width: 100%;
        padding: 12px 6px;
      }
    }

    &-link {
      background-color: transparent;
      border-radius: 6px;
      color: var(--okp-text-low);
      box-sizing: border-box;
      overflow: hidden;
      display: flex;
      flex: 0 0 100%;
      flex-direction: row;
      align-items: center;
      justify-content: center;
      height: 48px;
      transition: all 0.3s;
      padding: 6px 12px;

      &:hover {
        background-color: var(--okp-lighten);
        color: var(--okp-text);

        .okp-menu-link-icon {
          color: var(--okp-primary);
        }
      }

      &-name {
        box-sizing: border-box;
        font-family: "Quicksand", "Noto Sans", sans-serif;
        font-size: 0.8rem;
        font-weight: 600;
        line-height: 120%;
        overflow: hidden;
        display: block;
        flex: 0 0 calc(100% - 24px);
        transition: all 0.3s;
        padding: 12px;
      }
    }
  }

  .okp-footer {
    box-sizing: border-box;
    display: flex;
    width: 100%;
    padding: 6px;

    &-link {
      background-color: transparent;
      border-radius: 6px;
      color: var(--okp-text-low);
      box-sizing: border-box;
      overflow: hidden;
      display: flex;
      flex: 0 0 100%;
      flex-direction: row;
      align-items: center;
      justify-content: center;
      height: 48px;
      transition: all 0.3s;
      padding: 6px 12px;

      &:hover {
        background-color: var(--okp-lighten);
        color: var(--okp-text);

        .okp-menu-link-icon {
          color: var(--okp-primary);
        }
      }

      &-name {
        box-sizing: border-box;
        font-family: "Quicksand", "Noto Sans", sans-serif;
        font-size: 0.8rem;
        font-weight: 600;
        line-height: 120%;
        overflow: hidden;
        display: block;
        flex: 0 0 calc(100% - 24px);
        transition: all 0.3s;
        padding: 12px;
      }
    }
  }

  &.okp-close {
    flex-basis: 64px;

    .okp-header {
      &-banner {
        height: 76px;

        &-cover {
          height: 48px;
          opacity: 0;
        }

        &-avatar {
          width: 48px;
          height: 48px;
          top: 12px;
        }
      }

      &-info *,
      &-counts * {
        font-size: 0;
        line-height: 0;
        opacity: 0;
        padding: 0;
      }
    }

    .okp-menu {
      &-link {
        flex: 0 0 48px;
        width: 48px;
        padding: 0;

        &-name {
          flex: 0 0 0;
          width: 0;
          padding: 0;
        }
      }
    }

    .okp-footer {
      &-link {
        flex: 0 0 48px;
        width: 48px;
        padding: 0;

        &-name {
          flex: 0 0 0;
          width: 0;
          padding: 0;
        }
      }
    }
  }

  &.okp-open {
    flex-basis: 250px;
  }
}

